# shell-mcp

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml.example  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/shell_mcp/: __init__.py  cli.py  command_parser.py  config.py  executor.py  keepalive.py  server.py  task_manager.py
tests/: test_cli.py  test_command_parser.py  test_config.py  test_executor.py  test_keepalive.py  test_server.py  test_task_manager.py
