[project]
name = "shell-mcp"
version = "0.1.0"
description = "MCP server for shell command execution"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "pyyaml",
]

[project.scripts]
shell-mcp = "shell_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shell_mcp"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
